<?php

/**
 * 読み込み機能を表すインターフェースクラスです
 */
interface Reader
{
  public function read();
  public function display();
}
